[gd_scene load_steps=13 format=3 uid="uid://d17668f27hd6n"]

[ext_resource type="Script" path="res://levels/pre_end/pre_end.gd" id="1_blobh"]
[ext_resource type="Texture2D" uid="uid://b8v0yrf3cw04o" path="res://assets/sprites/babash_face.png" id="1_x7xgt"]
[ext_resource type="FontFile" uid="uid://bw2kmoygcoqte" path="res://assets/font/fffforward.ttf" id="2_re2u6"]
[ext_resource type="AudioStream" uid="uid://cut3x5gqosqvi" path="res://assets/sounds/babash_voice.wav" id="3_vqxqr"]
[ext_resource type="Texture2D" uid="uid://d2qqg8n3h3you" path="res://assets/sprites/plankton.png" id="5_mom1k"]
[ext_resource type="AudioStream" uid="uid://dpoelauxv0ery" path="res://assets/sounds/moan.ogg" id="6_6wv0l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xouei"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vpas"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1cbs"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ifnd"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcpnf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_right = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq66p"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_right = 1000

[node name="PreEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blobh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xouei")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -600.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Control" type="Control" parent="Panel/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(2.08165e-12, 500)
layout_mode = 2

[node name="CharacterSprite2" type="Sprite2D" parent="Panel/VBoxContainer/MarginContainer3/Control"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_mom1k")
centered = false

[node name="CharacterSprite" type="Sprite2D" parent="Panel/VBoxContainer/MarginContainer3/Control"]
texture = ExtResource("1_x7xgt")
centered = false

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3vpas")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer2/Panel/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_re2u6")
theme_override_font_sizes/font_size = 47
text = "Babash"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 600)
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s1cbs")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TextLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(1600, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_constants/line_spacing = 33
theme_override_fonts/font = ExtResource("2_re2u6")
theme_override_font_sizes/font_size = 45
autowrap_mode = 2

[node name="Arrow" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Arrow"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Arrow/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/separation = 0

[node name="Panel2" type="Panel" parent="Panel/Arrow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ifnd")

[node name="Panel" type="Panel" parent="Panel/Arrow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tcpnf")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Arrow/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/separation = 0

[node name="Panel2" type="Panel" parent="Panel/Arrow/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ifnd")

[node name="Panel" type="Panel" parent="Panel/Arrow/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rq66p")

[node name="Timer" type="Timer" parent="."]

[node name="PrintingTimer" type="Timer" parent="."]

[node name="BabashPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vqxqr")
volume_db = -10.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6wv0l")
volume_db = 13.371

[connection signal="gui_input" from="Panel/Arrow" to="." method="_on_arrow_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PrintingTimer" to="." method="_on_printing_timer_timeout"]
[connection signal="finished" from="BabashPlayer" to="." method="_on_babash_player_finished"]
